...
                app:errorEnabled="true"
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/makeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:maxLines="1">

                </com.google.android.material.textfield.TextInputEditText>
...
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/modelEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:maxLines="1">

                </com.google.android.material.textfield.TextInputEditText>
...
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/valueEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1">

                </com.google.android.material.textfield.TextInputEditText>
...
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"
                android:paddingBottom="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/snEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:maxLines="1">

                </com.google.android.material.textfield.TextInputEditText>
...
                app:boxBackgroundColor="@color/colorTextBox"
                android:paddingBottom="20dp"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage|textCapSentences">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
...
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"
                android:paddingBottom="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage|textCapSentences">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
...
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"
                >

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/dateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"

                    android:cursorVisible="false"
                    android:focusable="false"
...
                style="?attr/textInputFilledStyle"
                app:boxBackgroundColor="@color/colorTextBox"
                android:hint="Add Tag"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tagEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 \n"
                    >

...
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm"
        android:id="@+id/updateItemConfirm"
        android:backgroundTint="@color/colorButton"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_gravity="bottom|center_horizontal"
        android:textColor="@color/colorConfirmButtonText"
        android:layout_marginBottom="30dp">

...
