...
        android:contentDescription="Add a tags to all selected items"
        android:icon="@drawable/ic_tag_button_24dp"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/itemMultiselectDelete"
        android:title="DELETE ALL"
        android:contentDescription="Delete all selected items"
        android:icon="@drawable/ic_delete_button_24dp"
        app:showAsAction="always"
        />

...
