...
    tools:context=".itemlist.ItemListActivity"
    android:id="@+id/itemListContent"
    >

    <androidx.recyclerview.widget.RecyclerView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/itemList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?actionBarSize"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        >
...

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addButton"

        app:srcCompat = "@drawable/ic_add_button_24dp"
        android:backgroundTint="@color/colorAddButton"
        android:tint="@color/black"
        app:layout_anchor="@id/itemListTotalBar"
        app:layout_anchorGravity="bottom|right"
...
