<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/camera"
        android:title="Add From Camera">

    </item>

    <item android:id="@+id/gallery"
        android:title="Add From Gallery"
        >
...
